# verner

./: .gitignore  .verner.yml  Cargo.toml  test-git.sh
.github/workflows/: build.yml  release.yml
azure-pipelines/templates/: install-verner.steps.pwsh.yml
verner/: Cargo.toml
verner-core/: Cargo.toml
verner-core/src/: lib.rs  output.rs  semver.rs
verner-core/src/semver/: mod.rs
verner-git/: Cargo.toml  setup-test.sh
verner-git/src/: cli.rs  config.rs  lib.rs  main.rs  releaseflow.rs  tests.rs
verner/src/: config.rs  console.rs  git.rs  lib.rs  main.rs  version.rs  walker.rs
