[package]
name = "verner-git"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.4", features = ["derive"] }
git2 = { version = "0.18.3", default-features = false, features = [] }
paste = "1.0.14"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
verner-core = { version = "0.1.0", path = "../verner-core" }
